--- a/home.html
+++ b/home.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Home</title>
+  <title>The Forgotten Door</title>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="script/script.js">
   <link rel="stylesheet" href="style/style.scss">
   <link rel="stylesheet" href="bootstrap-5.3.3/">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,6 +17,7 @@
   <!--container-->
   <div class="container">
 
+    <!--light/dark mode button-->
     <button class="btn btn-dark shadow d-flex justify-content-end" id="btnSwitch">Toggle Dark/Light</button><br>
 
     <!--navbar-->
@@ -32,7 +35,7 @@
               <a class="nav-link active" aria-current="page" href="home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#header1">Stories</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -66,9 +69,9 @@
     </div>-->
 
     <!--logoimg-->
-    <div class="row">
+    <div data-aos="fade-down" class="row">
       <div class="col">
-        <img style="border-radius: 45%;" src="photos/Screenshot 2025-01-29 201220.jpg" class="img-fluid" alt="">
+        <img style="border-radius: 50%;" src="photos/Screenshot 2025-01-29 201220.jpg" class="img-fluid" alt="">
       </div>
     </div><hr>
 
@@ -197,19 +200,12 @@
             <h2 class="accordion-header">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                 aria-expanded="true" aria-controls="collapseOne">
-                Accordion Item #1
+                Mission
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse
-                plugin
-                adds the appropriate classes that we use to style each element. These classes control the overall
-                appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with
-                custom
-                CSS or overriding our default variables. It's also worth noting that just about any HTML can go within
-                the
-                <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong>Mission statement</strong> "Writer's Title is a passionate platform dedicated to celebrating the craft of short storytelling. Our mission is to provide writers with a space to share their original stories, gain much-needed exposure, and connect with a diverse community of readers and fellow writers. We believe that every voice deserves to be heard, and that the power of storytelling can bring people together, spark new ideas, and foster deeper connections. Through collaboration, feedback, and shared creativity, we aim to inspire writers to push their boundaries, hone their skills, and continue telling the stories that matter most to them. At Writer's Title, we're building a supportive, dynamic space where both seasoned and emerging storytellers can grow, thrive, and find their audience."
               </div>
             </div>
           </div>
@@ -217,18 +213,12 @@
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Accordion Item #2
+                Writers
               </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse
-                plugin adds the appropriate classes that we use to style each element. These classes control the overall
-                appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with
-                custom
-                CSS or overriding our default variables. It's also worth noting that just about any HTML can go within
-                the
-                <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong>Message for the writers</strong> "At Writer's Title, we understand the passion and dedication that go into crafting a short story. We’re here to give you the platform you need to share your work with the world. Whether you’re a seasoned writer or just starting out, we believe every story deserves to be seen, heard, and celebrated. By publishing your stories on our site, you’ll gain exposure, connect with like-minded creators, and receive valuable feedback to help you grow as a writer. Our community thrives on support, inspiration, and collaboration—here, you’ll find a place where your voice can shine. Join us in building a space where creativity knows no bounds and every writer has the opportunity to leave their mark."
               </div>
             </div>
           </div>
@@ -236,19 +226,12 @@
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Accordion Item #3
+                Readers
               </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse
-                plugin
-                adds the appropriate classes that we use to style each element. These classes control the overall
-                appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with
-                custom
-                CSS or overriding our default variables. It's also worth noting that just about any HTML can go within
-                the
-                <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong>Message for the readers.</strong> "As a reader, you’re not just consuming stories—you’re part of the journey. At Writer’s Title, we invite you to explore fresh, original short stories from emerging and established writers alike. Every story you read helps support the creativity and growth of the storytellers behind them. Your engagement, feedback, and appreciation foster a vibrant community where writers are encouraged to continue creating and evolving. Whether you're looking for a quick escape, a new perspective, or a deeply moving narrative, you'll find it here. Join us in celebrating the art of storytelling and discover the voices that are shaping the future of storytelling."
               </div>
             </div>
           </div>
@@ -256,19 +239,13 @@
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Accordion Item #4
+                Submit a Story
               </button>
             </h2>
             <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse
-                plugin
-                adds the appropriate classes that we use to style each element. These classes control the overall
-                appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with
-                custom
-                CSS or overriding our default variables. It's also worth noting that just about any HTML can go within
-                the
-                <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong>Share your dreams!</strong> "Ready to share your story with the world? Submitting your short story to Writer’s Title is easy! Simply send your work to the email provided below, and we’ll review it for publication on our platform. We welcome stories of all genres, lengths, and styles—if it’s your unique creation, we want to read it. When submitting, be sure to include your name, story title, and a brief author bio. Our team will carefully consider your submission and get back to you as soon as possible. Join us in growing this community of writers and readers by sharing your voice. We can’t wait to see what you’ve written!"
+                <p>Writer'sTitle.info@gmail.com</p>
               </div>
             </div>
           </div>
@@ -354,7 +331,14 @@
   </div>
 
   <!--script-->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
+    //animate on scroll
+    AOS.init();
+  </script>
+
+  <script>
+    //light/dark mode button
     document.getElementById('btnSwitch').addEventListener('click',()=>{
     if (document.documentElement.getAttribute('data-bs-theme') == 'dark') {
         document.documentElement.setAttribute('data-bs-theme','light')
